<resources>
    <string name="app_name">Berea College Accomodation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Login</string>
    <string name="email">Email</string>
    <string name="emailPassword">Password</string>
    <string name="existingUser">Already a user? Login</string>
    <string name="newUser">Not yet registered? Sign Up</string>
    <string name="title_notifications">Notifications</string>
</resources>